<resources>
    <string name="app_name">PostUciApp</string>
    <string name="login_enter_as">Entrar como:</string>
    <string name="login_or">o</string>
    <string name="login_patient">Paciente</string>
    <string name="login_medic">Profesional sanitario</string>
    <string name="morph_idle">Hecho</string>
    <string name="accept"><b>Aceptar</b></string>
    <string name="cancel"><b>Cancelar</b></string>
    <string name="understood">Entendido</string>
    <string name="submit">Enviar</string>
    <string name="do_test">Realizar</string>
    <string name="view_results">Ver</string>
    <string name="sign_up">Registro</string>
    <string name="dni_hint">DNI</string>
    <string name="name_hint">Nombre</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_sign_in">Entrar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="remember_me">Recordarme</string>
    <string name="forget_password"><u>¿Has olvidado la contraseña?</u></string>
    <string name="login_ok">Te has logueado correctamente\n\nPulsa para continuar</string>
    <string name="register_ok">Te has registrado correctamente\n\nPulsa para continuar</string>
    <string name="sign_in_info">Necesitas tener creada una cuenta para entrar en la aplicación</string>
    <string name="sign_up_header">Registro</string>
    <string name="no_pending_tests">No tienes tests pendientes</string>
    <string name="progress_authenticating">Iniciando sesión</string>
    <string name="patient_pending_tests">Tests pendientes</string>
    <string name="patient_contact">Contactar</string>
    <string name="patient_useful_info">Información de interés</string>
    <string name="patient_view">Ver</string>
    <string name="youtube_video">Después de la UCI</string>
    <string name="breathing_exercise">Ejercicios respiratorios</string>
    <string name="patient_name">Daniel Mancebo Aldea</string>
    <string name="patient_dni">47478822Y</string>
    <string name="patient_grade">Gravedad: 51%</string>
    <string name="patient_grade_template">Gravedad: %1%</string>
    <string name="patient_num_pending_tests">Tests pendientes: 2</string>
    <string name="patient_num_pending_tests_template">Tests pendientes: %1</string>
    <string name="patient_num_done_tests">Tests realizados: 1</string>
    <string name="patient_num_done_tests_template">Tests realizados: %1</string>
    <string name="patient_messages">Hay 2 mensaje/s por leer</string>
    <string name="patient_messages_template">Hay %1 mensaje/s por leer</string>
    <string name="patient_pending_tests_heading">Tests pendientes</string>
    <string name="patient_done_tests_heading">Tests realizados</string>
    <string name="patient_messages_heading">Mensajes sin leer</string>
    <string name="patient_no_pending_tests">No hay tests pendientes</string>
    <string name="patient_no_done_tests">No hay tests realizados</string>
    <string name="patient_no_messages">No hay mensajes por leer</string>
    <string name="test_name">Test de escala de impacto de evento</string>
    <string name="test_template_question">1. He pensado acerca de ello sin quererlo:</string>
    <string-array name="four_option_button">
        <item>Nunca</item>
        <item>Rara vez</item>
        <item>A veces</item>
        <item>A menudo</item>
    </string-array>
    <string name="test_heading">A continuación se le mostrará una lista de comentarios que hace la gente que ha pasado por una situación de vida estresante. Por favor, lea cada uno de ellos e indique con qué frecuencia estos comentarios fueron verdad para usted cuando ya estaba de alta en el hospital.</string>
    <string name="test_heading_eie">A continuación se le mostrará una lista de comentarios que hace la gente que ha pasado por una situación de vida estresante. Por favor, lea cada uno de ellos e indique con qué frecuencia estos comentarios fueron verdad para usted cuando ya estaba de alta en el hospital.</string>
    <string name="test_heading_had">Los médicos conocen la importancia de los factores emocionales en la mayoría de enfermedades. Si el médico sabe cual es el estado emocional del paciente puede prestarle entonces mejor ayuda.\n\nEste cuestionario ha sido confeccionado para ayudar a que su médico sepa cómo se siente usted afectiva y emocionalmente. No es preciso que preste atención a los números que aparecen a la izquierda. Lea cada pregunta y subraye la respuesta que usted considere que coincide con su propio estado emocional en la última semana.\n\nNo es necesario que piense mucho tiempo cada respuesta: en este cuestionario las respuestas espontáneas tiene más valor que las que se piensan mucho.</string>
    <string name="test_had_a1_question">A.1. Me siento tenso/a o nervioso/a:</string>
    <string name="test_had_d1_question">D.1. Sigo disfrutando de las cosas como siempre:</string>
    <string name="test_had_a2_question">A.2. Siento una especie de temor como si algo malo fuera a suceder:</string>
    <string name="test_had_d2_question">D.2. Soy capaz de reírme y ver el lado gracioso de las cosas:</string>
    <string name="test_had_a3_question">A.3. Tengo la cabeza llena de preocupaciones:</string>
    <string name="test_had_d3_question">D.3. Me siento alegre:</string>
    <string name="test_had_a4_question">A.4. Soy capaz de permanecer sentado/a tranquilo/a y relajado/a:</string>
    <string name="test_had_d4_question">D.4. Me siento lento/a y torpe:</string>
    <string name="test_had_a5_question">A.5. Experimento una desagradable sensación de "nervios y hormigueos" en el estómago:</string>
    <string name="test_had_d5_question">D.5. He perdido el interés por mi aspecto personal:</string>
    <string name="test_had_a6_question">A.6. Me siento inquieto/a como si no pudiera parar de moverme:</string>
    <string name="test_had_d6_question">D.6. Espero las cosas con ilusión:</string>
    <string name="test_had_a7_question">A.7. Experimento de repente sensaciones de gran angustia o temor:</string>
    <string name="test_had_d7_question">D.7. Soy capaz de disfrutar con un buen libro o con un buen programa de radio o televisión:</string>
    <string name="test_had_a1_3">Casi todo el día</string>
    <string name="test_had_a1_2">Gran parte del día</string>
    <string name="test_had_a1_1">De vez en cuando</string>
    <string name="test_had_a1_0">Nunca</string>
    <string name="test_had_d1_3">Ya no disfruto con nada</string>
    <string name="test_had_d1_2">Solamente un poco</string>
    <string name="test_had_d1_1">No tanto como antes</string>
    <string name="test_had_d1_0">Ciertamente, igual que antes</string>
    <string name="test_had_a2_3">Sí, y muy intenso</string>
    <string name="test_had_a2_2">Sí, pero no muy intenso</string>
    <string name="test_had_a2_1">Sí, pero no me preocupa</string>
    <string name="test_had_a2_0">No siento nada de eso</string>
    <string name="test_had_d2_3">Actualmente, en absoluto</string>
    <string name="test_had_d2_2">Actualmente, mucho menos</string>
    <string name="test_had_d2_1">Actualmente, algo menos</string>
    <string name="test_had_d2_0">Igual que siempre</string>
    <string name="test_had_a3_3">Casi todo el día</string>
    <string name="test_had_a3_2">Gran parte del día</string>
    <string name="test_had_a3_1">De vez en cuando</string>
    <string name="test_had_a3_0">Nunca</string>
    <string name="test_had_d3_3">Nunca</string>
    <string name="test_had_d3_2">Muy pocas veces</string>
    <string name="test_had_d3_1">En algunas ocasiones</string>
    <string name="test_had_d3_0">Gran parte del día</string>
    <string name="test_had_a4_3">Nunca</string>
    <string name="test_had_a4_2">Raras veces</string>
    <string name="test_had_a4_1">A menudo</string>
    <string name="test_had_a4_0">Siempre</string>
    <string name="test_had_d4_3">Gran parte del día</string>
    <string name="test_had_d4_2">A menudo</string>
    <string name="test_had_d4_1">A veces</string>
    <string name="test_had_d4_0">Nunca</string>
    <string name="test_had_a5_3">Muy a menudo</string>
    <string name="test_had_a5_2">A menudo</string>
    <string name="test_had_a5_1">Sólo en algunas ocasiones</string>
    <string name="test_had_a5_0">Nunca</string>
    <string name="test_had_d5_3">Completamente</string>
    <string name="test_had_d5_2">No me cuido como debería hacerlo</string>
    <string name="test_had_d5_1">Es posible que no me cuide como debiera</string>
    <string name="test_had_d5_0">Me cuido como siempre lo he hecho</string>
    <string name="test_had_a6_3">Realmente mucho</string>
    <string name="test_had_a6_2">Bastante</string>
    <string name="test_had_a6_1">No mucho</string>
    <string name="test_had_a6_0">Nunca</string>
    <string name="test_had_d6_3">En absoluto</string>
    <string name="test_had_d6_2">Mucho menos que antes</string>
    <string name="test_had_d6_1">Algo menos que antes</string>
    <string name="test_had_d6_0">Como siempre</string>
    <string name="test_had_a7_3">Muy a menudo</string>
    <string name="test_had_a7_2">Con cierta frecuencia</string>
    <string name="test_had_a7_1">Raramente</string>
    <string name="test_had_a7_0">Nunca</string>
    <string name="test_had_d7_3">Casi nunca</string>
    <string name="test_had_d7_2">Pocas veces</string>
    <string name="test_had_d7_1">Algunas veces</string>
    <string name="test_had_d7_0">A menudo</string>
    <string name="test_eie_question_1">1. He pensado acerca de ello sin quererlo</string>
    <string name="test_eie_question_2">2. Logré evitar perturbarme cuando pensaba acerca de ello o cuando me lo recordaban</string>
    <string name="test_eie_question_3">3. Traté de borrarlo de mi memoria</string>
    <string name="test_eie_question_4">4. Me costó dormirme o permanecer dormido porque imágenes o pensamientos acerca de ello me aparecían en la mente</string>
    <string name="test_eie_question_5">5. Tengo oleadas de pensamientos muy fuertes acerca de ello</string>
    <string name="test_eie_question_6">6. Soñé acerca de ello</string>
    <string name="contact_heading">Formulario de contacto:</string>
    <string name="contact_hint">Escriba el mensaje aquí…</string>
    <string name="breathing_exercise_header">Los ejercicios respiratorios tienen como objetivo disminuir el trabajo respiratorio, mejorar la oxigenación y aumentar la función respiratoria. Se realizarán una vez al día.</string>
    <string name="breathing_exercise_text_0">Respiración con los labios fruncidos</string>
    <string name="breathing_exercise_text_1">1. Ponga los labios como para apagar una vela o silbar\n2. Inspire lentamente a través de la nariz con la boca cerrada\n3. Espire lentamente a través de los labios semicerrados\n4. La espiración debe durar el doble de la inspiración</string>
    <string name="breathing_exercise_text_2">Respiración diafragmática</string>
    <string name="breathing_exercise_text_3">1. Sentado, con las rodillas flexionadas, colocar las manos sobre el abdomen.\n2. Inspirar profundamente a través de la nariz manteniendo la boca cerrada. Al inspirar, el abdomen se distiende elevando las manos.\n3. Colocar los labios como si fuese a silbar y espirar lenta y suavemente de forma pasiva, haciendo un sonido silbante sin hinchar los carrillos. Al ir expulsando el aire, los músculos abdominales se hunden, volviendo a la posición original.</string>
    <string name="breathing_exercise_text_4">Ejercicios de expansión pulmunar</string>
    <string name="breathing_exercise_text_5">1. Inspirar profundamente mientras empuja el tórax expandiéndolo contra la presión de las manos.\n2. Colocar las manos sobre la zona del torax que hay que expandir aplicando una presión moderada.\n3. Mantener unos segundos la máxima inspiración posible y comenzar a espirar el aire lentamente.\n4. Al final de la espiración, las manos realizan una ligera vibración sobre el área.</string>
</resources>