<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_enter_as"
            android:textColor="@color/colorText"
            android:layout_marginBottom="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/patient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login_patient"
            android:textColor="@color/colorText"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:textColor="@color/colorText"
            android:layout_marginBottom="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/medic_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:text="@string/login_medic"
            android:textColor="@color/colorText"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</RelativeLayout>