<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/patient_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/patient_dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/patient_dni"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/cpb_grey"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/patient_pending_tests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/patient_num_pending_tests"
                android:textSize="12sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/patient_done_tests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/patient_num_done_tests"
                android:textSize="12sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/patient_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/patient_grade"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/message_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/mail_outline_black_48dp"
                    android:tint="@android:color/darker_gray"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/patient_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/patient_messages"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_patient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="top"
            android:text="@string/patient_view"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>